fixed zoom on small screens

--- a/src/Products/Components/ProductItem.css
+++ b/src/Products/Components/ProductItem.css
@@ -26,6 +26,12 @@
   text-decoration: underline;
 }
 
+@media screen and (min-width: 420px) {
+  .product-grid {
+    zoom: 75%;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .product-grid {
     display: flex;
