--- a/src/Products/Pages/ProductPage.css
+++ b/src/Products/Pages/ProductPage.css
@@ -54,6 +54,12 @@
   font-size: x-large;
 }
 
+@media screen and (min-width: 320px) {
+  .product-page {
+    zoom: 75%;
+  }
+}
+
 @media screen and (max-width: 420px) {
   .product-page {
     display: flex;
